--- a/src/main/webapp/css/sass/_main.sass
+++ b/src/main/webapp/css/sass/_main.sass
@@ -12,10 +12,15 @@ $text-color: #d4c155
 $bg-color: #9a8f19
 
 html
+	background-color: #f0f0f0
 	border-top: 3px solid #c4ae30 
 
-html, body
+body
+	height: 100%
+	margin: 0
+	padding: 0
 	background: #f6f6f6
+	border-bottom: 20px solid #f0f0f0 
 
 #info-form
 	width: 40%
@@ -90,10 +95,13 @@ html, body
 			padding: 12px 12px
 			background-color: #f3f3f3
 			border: 1px solid #e4e4e4
+			-webkit-border-radius: 10px
+			-moz-border-radius: 10px
 			border-radius: 10px
 
 body > footer
-	min-height: 50px
+	height: 100%
+	min-height: 80px
 	background-color: #f0f0f0
 	-webkit-box-shadow: inset 0 1px 0 0 #f0f0f0, inset 0 2px 0 0 #d6d6d6, inset 0 3px 0 0 #f9f9f9, inset 0 4px 7px 1px #e9e9e9
 	-moz-box-shadow: inset 0 1px 0 0 #f0f0f0, inset 0 2px 0 0 #d6d6d6, inset 0 3px 0 0 #f9f9f9, inset 0 4px 7px 1px #e9e9e9
