--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -550,11 +550,19 @@ ul.inline li {
 ul.unstyled li {
   list-style: none; }
 
+.hidden {
+  display: none; }
+
 html {
+  background-color: #f0f0f0;
   border-top: 3px solid #c4ae30; }
 
-html, body {
-  background: #f6f6f6; }
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: #f6f6f6;
+  border-bottom: 20px solid #f0f0f0; }
 
 #info-form {
   width: 40%; }
@@ -618,7 +626,7 @@ html, body {
   width: 725px;
   min-height: 500px;
   margin-left: 30px;
-  padding-left: 30px;
+  padding: 0 0 20px 30px;
   border-left: 1px solid #e0e0e0; }
   #main-intern ul {
     margin: 0;
@@ -628,14 +636,30 @@ html, body {
       padding: 12px 12px;
       background-color: #f3f3f3;
       border: 1px solid #e4e4e4;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
       border-radius: 10px; }
 
 body > footer {
-  min-height: 50px;
+  height: 100%;
+  min-height: 80px;
   background-color: #f0f0f0;
   -webkit-box-shadow: inset 0 1px 0 0 #f0f0f0, inset 0 2px 0 0 #d6d6d6, inset 0 3px 0 0 #f9f9f9, inset 0 4px 7px 1px #e9e9e9;
   -moz-box-shadow: inset 0 1px 0 0 #f0f0f0, inset 0 2px 0 0 #d6d6d6, inset 0 3px 0 0 #f9f9f9, inset 0 4px 7px 1px #e9e9e9;
   box-shadow: inset 0 1px 0 0 #f0f0f0, inset 0 2px 0 0 #d6d6d6, inset 0 3px 0 0 #f9f9f9, inset 0 4px 7px 1px #e9e9e9; }
+
+table {
+  width: 100%;
+  border: 1px solid #dddddd; }
+  table thead {
+    text-align: left; }
+  table th, table td {
+    padding: 10px 10px 9px;
+    line-height: 18px; }
+  table th {
+    border-bottom: 1px solid #cccccc; }
+  table td {
+    border: 1px solid #dddddd; }
 
 ul.bank-shortcuts {
   overflow: hidden; }
@@ -645,32 +669,29 @@ ul.bank-shortcuts {
     float: left;
     margin-bottom: 5px; }
 
-table {
-  width: 100%;
-  border: 1px solid #dddddd; }
-  table.statement {
-    display: none; }
-  table td {
-    border: 1px solid #dddddd; }
-  table td.balance {
-    text-align: right; }
-  table th, table td {
-    padding: 10px 10px 9px;
-    line-height: 18px; }
-  table th {
-    border-bottom: 1px solid #cccccc; }
-    table th:nth-child(1) {
-      width: 15%; }
-    table th:nth-child(2) {
-      width: 34%; }
-    table th:nth-child(3) {
-      width: 34%; }
-    table th:nth-child(4) {
-      width: 17%; }
-  table thead {
-    text-align: left; }
-  table tbody tr:last-child td {
-    border-bottom: 1px solid #cccccc; }
+table td.balance {
+  text-align: right; }
+table.bank th:nth-child(1) {
+  width: 15%; }
+table.bank th:nth-child(2) {
+  width: 34%; }
+table.bank th:nth-child(3) {
+  width: 34%; }
+table.bank th:nth-child(4) {
+  width: 17%; }
+table.bank tbody tr:last-child td {
+  border-bottom: 1px solid #cccccc; }
+
+#statement-transactions {
+  display: none; }
+
+#general-stats {
+  overflow: hidden; }
+  #general-stats > div {
+    width: 50%; }
+
+#dynamic-stats {
+  display: none; }
 
 div.roles {
   overflow: hidden;
@@ -678,6 +699,24 @@ div.roles {
   div.roles > div {
     width: 50%;
     float: left; }
+
+table.domain thead th:nth-child(1) {
+  width: 40%; }
+table.domain thead th:nth-child(2) {
+  width: 40%; }
+table.domain thead th:nth-child(3) {
+  width: 20%; }
+
+#domains {
+  min-height: 500px;
+  padding-bottom: 20px; }
+
+/* roles */
+#new-role {
+  display: none; }
+
+table.roles tbody tr:hover {
+  background-color: #eeeeee; }
 
 #avatar-info {
   height: 100%; }
